# CryptTalk

./: .gitignore  Cargo.toml  README.md  build.rs  database.db  private_key.pem  public_key.pem  rsa by ivana.py
proto/: talk_api.proto
src/: app.rs  main.rs  node.rs  security.rs  ui.rs
src/pb/: talk_api.rs
src/security/: Clien_CLI.py  Client.py  ClientTest.py  Client_Register_LogIn.py  Database_Part.py  Safe_Part.py  Server.py  ServerTest.py  Socket_Transfer_Part.py  database.db  rsa.py  sha256.py
src/ui/: login_page.rs  main_page.rs  register_page.rs  title_area.rs  tools.rs
