[package]
name = "crypt_talk"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
tui-textarea = "0.4.0"
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.29", features = ["full"] }
async-trait = "0.1"
futures = "0.3.29"
libp2p = { version = "0.53.2", features = ["mdns", "tokio", "tcp", "macros", "yamux", "noise"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.10.2"
